--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       
       - name: Install the project
-        run: uv sync --locked --all-extras --test
+        run: uv sync --locked --all-extras --with test
 
       - name: Run tests
         run: uv run pytest tests
