--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI - Run Tests
 
 on:
   push:
-    branches: [ main, develop ] 
+    branches: [main, develop]
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
 
 jobs:
   build:
@@ -20,11 +20,38 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
+      - name: Install libBGPStream Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential curl zlib1g-dev libbz2-dev libcurl4-openssl-dev librdkafka-dev
+
+      - name: Compile and Install libBGPStream
+        run: |
+          # 1. Download wandio
+          mkdir -p ~/src && cd ~/src/
+          curl -LO https://github.com/LibtraceTeam/wandio/archive/refs/tags/4.2.4-1.tar.gz
+          tar zxf 4.2.4-1.tar.gz
+          cd wandio-4.2.4-1/
+          ./configure
+          make
+          sudo make install
+          sudo ldconfig
+
+          # 2. Download and install libBGPStream
+          cd ~/src/
+          curl -LO https://github.com/CAIDA/libbgpstream/releases/download/v2.2.0/libbgpstream-2.2.0.tar.gz
+          tar zxf libbgpstream-2.2.0.tar.gz
+          cd libbgpstream-2.2.0/
+          ./configure
+          make
+          sudo make install
+          sudo ldconfig
+
       - name: Install uv and set the Python version
         uses: astral-sh/setup-uv@v6
         with:
           python-version: ${{ matrix.python-version }}
-      
+
       - name: Install the project
         run: uv sync --locked --all-extras --group test
 
